--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 flask
 flask_cors
-opencv-python  # If using video processing
-gunicorn  # Required for deployment
+opencv-python
+mediapipe
+gunicorn
+numpy
+pyttsx3
